fixed overflow clipping on history dropup

--- a/src/app/stylesheets/index.scss
+++ b/src/app/stylesheets/index.scss
@@ -28,6 +28,10 @@ body {
   width: 100%;
 }
 
+.shopping_list_item_text_history{
+  display: inline-block;
+  margin-left: 1.5%;
+}
 
 .checked_shopping_list_item_text{
   text-decoration: line-through;
@@ -35,8 +39,13 @@ body {
 
 .shopping_list_item_checkbox{
   display: inline-block;
-  margin-left: 2.5%;
 }
+
+.dropdown_container ul.dropdown-menu{
+  overflow-y: auto;
+  max-height: 30vh;
+}
+
 
 .loader {
   margin: auto;
